@@ -37,6 +37,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #6665: Fix fnmatch to properly match filenames with newlines in them.
+
 - Issue #7246 & Issue #7208: getpass now properly flushes input before
   reading from stdin so that existing input does not confuse it and
   lead to incorrect entry or an IOError.  It also properly flushes it
